# twelve-factor-app-demo

./: .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  execute-in-test-container.sh  execute.sh  inventory.ini  load-env.sh  local.env  local.secret.env  setup.ansible.yaml  setup.sh  setup.yaml
backend/: Dockerfile  Dockerfile.test  README.md  pyproject.toml
backend/config/: errors.py  schemas.py  settings.py  urls.py
backend/src/: Dockerfile
backend/src/config/: api.py  asgi.py  errors.py  exceptions.py  schemas.py
backend/src/todos/: api.py
backend/tests/: Dockerfile  conftest.py
backend/tests/todos/: conftest.py  test_api.py
backend/todos/: api.py  errors.py  models.py  schemas.py
backend/todos/migrations/: 0001_initial.py
deployment/aws/: .gitignore  1.post-apply.sh  1.setup.ansible.yaml  1.update-params.sh  2.build.sh  2.create-env-file.sh  2.deploy.ansible.yaml  2.deploy.sh  3.create-env-secret-file.sh  3.create-release.sh  4.build-and-push-images.sh  4.deploy.sh  4.install-LBC.sh  4.patch-coredns.sh  5.deploy.sh  README.md  create-env-file.sh  create-env-secret-file.sh
deployment/aws/1.config.tf/: .terraform.lock.hcl  README.md  parameters.tf  providers.tf  secrets.tf
deployment/aws/1.shared-services.tf/: ecr.tf  outputs.tf  providers.tf  variables.tf
deployment/aws/2.cluster.tf/: .terraform.lock.hcl  after-apply.sh  data.tf  ecr.tf  eks.tf  main.tf  outputs.tf  providers.tf  rds.tf
deployment/aws/2.main.tf/: .terraform.lock.hcl  eks.tf  outputs.tf  parameters.tf  providers.tf  rds.tf  s3.tf  secrets.tf
deployment/aws/chart/: Chart.yaml  (+1 more)
deployment/local/: backend-deployment.yaml  backend-job-template.yaml  backend-service.yaml  backend-test-deployment.yaml  database-volume-claim.yaml  kind-config-template.yaml  namespace.yaml  todo-api-db-deployment.yaml  todo-api-db-service.yaml  todo-api-db-volume-claim.yaml  todo-api-deployment.yaml  todo-api-service.yaml  todo-api-web-deployment.yaml
k8s/local/: backend-deployment.yaml  database-deployment.yaml
todo-api/: README.md  pyproject.toml
todo-api/src/: .dockerignore  Dockerfile  requirements.txt
todo-api/src/config/: api.py  settings.py  wsgi.py
todo-api/src/todos/: api.py  models.py  schemas.py
todo-api/src/todos/migrations/: 0001_initial.py
todo-api/tests/: Dockerfile  requirements.dev.txt
todo-api/tests/todos/: conftest.py  test_api.py
(+24 files in other folders)
